fix(user): module cards overflow

--- a/src/app/user/components/main-page/main-page.component.scss
+++ b/src/app/user/components/main-page/main-page.component.scss
@@ -1,6 +1,6 @@
 .list {
   display: flex;
-  flex-direction: row;
+  flex-wrap: wrap;
 
   &__card {
     display: flex;
